Changes in Version 0.1-5

  o  Added maxabort argument in OptimizeNetwork function.

Changes in Version 0.1-4
  
  o  Implemented crossover and mutation functions that are problem specific.

  o  Improved construction of initial default population.
  
  o  Implemented variable penalty function.
  
  o  Changed chromosome from binary to integer type.
  
  o  Changed genetic algorithm (GA) R library from "genalg" to "GA".
  
  o  Software license changed from "Unlimited" to "GPL (>= 2)".
  